Added diamond custom shape drawing with UIBezierPath

--- a/Matchima/Matchima/Base.lproj/Main.storyboard
+++ b/Matchima/Matchima/Base.lproj/Main.storyboard
@@ -19,7 +19,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8dL-oB-ayo" customClass="PlayingCardView">
-                                <frame key="frameInset" minX="97" minY="184" width="180" height="298"/>
+                                <frame key="frameInset" minX="16" minY="20" width="68" height="95"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Atf-FT-jpy" customClass="SetCardView">
+                                <frame key="frameInset" minX="84" minY="162" width="206" height="342"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
